[feature] add dark mode

--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -4,7 +4,7 @@
     style="font-size: 1.35em;"
     href="{{site.url}}"
   >
-    <a href="{{site.url}}" style="color: var(--black);"><h2>Jon Tow</h2></a>
+    <a href="{{site.url}}" style="color: var(--name-color);"><h2>Jon Tow</h2></a>
   </span>
 
   <div class="navbar navbar-expand">
@@ -17,7 +17,8 @@
           <span class="projects-nav">projects</span>
         </a>
         <a class="ml-2" href="{{site.url}}#notes">
-          <span class="notes-nav">notes</span></a>
+          <span class="notes-nav">notes</span>
+        </a>
       </p>
     </div>
   </div>
