--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -10,7 +10,7 @@
 
     <!-- Bio Row -->
     <p style="text-align: justify;">
-      <span style="color: var(--light-black)">CS @ Stony Brook University</span>
+      <span style="color: var(--header-type)">CS @ Stony Brook University</span>
       <br>
       <br>
       Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ,
