--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -11,11 +11,11 @@
       {% for post in site.posts %}
       <li class="pb-3">
         <p class="post-preview">
-          <span style="font-size: 0.95em; color: var(--light-black);">
+          <span style="color: var(--light-black);">
             {{post.date | date: '%B %d, %Y'}}
           </span>
           <br />
-          <a href="{{ post.url }}" style="font-size: 1.15em;">
+          <a href="{{ post.url }}">
             <span class="notes-nav">{{ post.title }}</span>
           </a>
           <br />
