--- a/_includes/_base/head.html
+++ b/_includes/_base/head.html
@@ -34,10 +34,10 @@
   ></script>
 
   <!-- Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap"
-    rel="stylesheet"
-  />
+  <!-- <link -->
+  <!--   href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" -->
+  <!--   rel="stylesheet" -->
+  <!-- /> -->
 
   <!-- Smooth Scrolling -->
   <script>
