--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,15 +14,22 @@
     <link rel="stylesheet" href="/assets/css/syntax.css">
 
     <!-- MathJax-->
+    <!-- These scripts must be before loading the actual MathJax lib -->
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({tex2jax: {inlineMath: [['\[','\]'], ['$', '$']]}});
+    </script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+          CommonHTML: { linebreaks: { automatic: true } },
+          "HTML-CSS": { linebreaks: { automatic: true } },
+          SVG: { linebreaks: { automatic: true } }
+      });
     </script>
     <script type="text/javascript" async
             src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
-
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           rel="stylesheet"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
