--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,235 +1,295 @@
-.highlight table {
+@media (prefers-color-scheme: light) {
+  /* Light theme styles go here */
+  :root {
+    --black: #232333;
+    --color: #232333;
+    --name-color: #232333;
+    --header: rgb(60, 60, 60);
+    --header-type: rgb(95, 95, 95);
+    --bg: #fbfbfb;
+    --bg-2: #241a4d;
+    --purple: #b15dab;
+    --purple-bg: #faf0f8;
+    --blue: #35759c;
+    --blue-bg: #fafdff;
+    --green: #479c06;
+    --green-bg: #ecfae9;
+    --red: #e27500;
+    --third-color: #232333;
+    --red-bg: #fff1ec;
+    --off-bg: #ededfa;
+    --border: #cfcfd1;
+    --error: #cc3737;
+  }
+}
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --red: #ffb76a;
+    --red-bg: #413c39;
+    --purple: #61f4ff;
+    --purple-bg: #404649;
+    --blue: #61f4ff;
+    --blue-bg: #404649;
+    --green: #67ff81;
+    --green-bg: #41493f;
+    --black: #000000;
+    --second-color: #fb6747;
+    --third-color: #fdb9ff;
+    --white: rgb(243, 243, 243);
+    --color: rgb(243, 243, 243);
+    --name-color: rgb(243, 243, 243);
+    --header: rgb(219, 219, 219);
+    --header-type: rgb(184, 173, 173);
+    --bg: rgb(30, 30, 30);
+    --off-bg: rgb(43, 43, 43);
+    --border: #000;
+    --error: #cc3737;
+  }
+}
+
+.highlight table {
 }
 
 .highlight table td {
-
 }
 
-
 .highlight table pre {
-
 }
 
 .highlight {
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
+  margin-top: 1.25em;
+  margin-bottom: 1.25em;
 }
 
 .highlight pre {
-    border: 1px solid #f4f4f8;
-    background-color: #F4F4F9;
-    border-radius: 3px;
-    font-size: 12px;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    -webkit-box-shadow: 3px 2px 6px -2px rgba(117,117,117,.5);
-    -moz-box-shadow: 3px 2px 6px -2px rgba(117,117,117,.5);
-    box-shadow: 3px 2px 6px -2px rgba(117,117,117,.5);
+  border: 1px solid var(--border);
+  background-color: var(--off-bg);
+  color: var(--color);
+  border-radius: 3px;
+  font-size: 12px;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  /* -webkit-box-shadow: 3px 2px 6px -2px rgba(117,117,117,.5); */
+  /* -moz-box-shadow: 3px 2px 6px -2px rgba(117,117,117,.5); */
+  /* box-shadow: 3px 2px 6px -2px rgba(117,117,117,.5); */
 }
 
 .highlight .cm {
-    color: #999988;
-    font-style: italic;
+  color: var(--color);
+  font-style: italic;
 }
 .highlight .cp {
-    color: #999999;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .c1 {
-    color: #999988;
-    font-style: italic;
+  color: var(--green);
+  font-style: italic;
 }
 .highlight .cs {
-    color: #999999;
-    font-weight: bold;
-    font-style: italic;
+  color: var(--color);
+  font-weight: bold;
+  font-style: italic;
 }
-.highlight .c, .highlight .cd {
-    color: #999988;
-    font-style: italic;
+.highlight .c,
+.highlight .cd {
+  color: var(--color);
+  font-style: italic;
 }
 .highlight .err {
-    color: #a61717;
-    background-color: #e3d2d2;
+  color: var(--error);
+  background-color: #e3d2d2;
 }
 .highlight .gd {
-    color: #000000;
-    background-color: #ffdddd;
+  color: var(--color);
+  background-color: #ffdddd;
 }
 .highlight .ge {
-    color: #000000;
-    font-style: italic;
+  color: var(--color);
+  font-style: italic;
 }
 .highlight .gr {
-    color: #aa0000;
+  color: #aa0000;
 }
 .highlight .gh {
-    color: #999999;
+  color: #999999;
 }
 .highlight .gi {
-    color: #000000;
-    background-color: #ddffdd;
+  color: #000000;
+  background-color: #ddffdd;
 }
 .highlight .go {
-    color: #888888;
+  color: #888888;
 }
 .highlight .gp {
-    color: #555555;
+  color: var(--color);
 }
 .highlight .gs {
-    font-weight: bold;
+  font-weight: bold;
 }
 .highlight .gu {
-    color: #aaaaaa;
+  color: #aaaaaa;
 }
 .highlight .gt {
-    color: #aa0000;
+  color: var(--red);
 }
 .highlight .kc {
-    color: #000000;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .kd {
-    color: #000000;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .kn {
-    color: #000000;
-    font-weight: bold;
+  color: var(--blue);
+  font-weight: bold;
 }
 .highlight .kp {
-    color: #000000;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .kr {
-    color: #000000;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .kt {
-    color: #445588;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
-.highlight .k, .highlight .kv {
-    color: #000000;
-    font-weight: bold;
+.highlight .k,
+.highlight .kv {
+  color: var(--blue);
+  font-weight: bold;
 }
 .highlight .mf {
-    color: #009999;
+  color: #009999;
 }
 .highlight .mh {
-    color: #009999;
+  color: #009999;
 }
 .highlight .il {
-    color: #009999;
+  color: #009999;
 }
 .highlight .mi {
-    color: #009999;
+  color: #009999;
 }
 .highlight .mo {
-    color: #009999;
+  color: #009999;
 }
-.highlight .m, .highlight .mb, .highlight .mx {
-    color: #009999;
+.highlight .m,
+.highlight .mb,
+.highlight .mx {
+  color: #009999;
 }
 .highlight .sb {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .sc {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .sd {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .s2 {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .se {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .sh {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .si {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .sx {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .sr {
-    color: #009926;
+  color: #009926;
 }
 .highlight .s1 {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .ss {
-    color: #990073;
+  color: #990073;
 }
 .highlight .s {
-    color: #d14;
+  color: var(--red);
 }
 .highlight .na {
-    color: #008080;
+  color: #008080;
 }
 .highlight .bp {
-    color: #999999;
+  color: var(--red);
 }
 .highlight .nb {
-    color: #0086B3;
+  color: #0086b3;
 }
 .highlight .nc {
-    color: #445588;
-    font-weight: bold;
+  color: var(--blue);
+  font-weight: bold;
 }
 .highlight .no {
-    color: #008080;
+  color: #008080;
 }
 .highlight .nd {
-    color: #3c5d5d;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .ni {
-    color: #800080;
+  color: #800080;
 }
 .highlight .ne {
-    color: #990000;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .nf {
-    color: #990000;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .nl {
-    color: #990000;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .nn {
-    color: #555555;
+  color: var(--color);
 }
 .highlight .nt {
-    color: #000080;
+  color: var(--color);
 }
+
+.highlight .n {
+  color: var(--color);
+}
+
+.highlight .p {
+  color: var(--color);
+}
+
 .highlight .vc {
-    color: #008080;
+  color: #008080;
 }
 .highlight .vg {
-    color: #008080;
+  color: #008080;
 }
 .highlight .vi {
-    color: #008080;
+  color: #008080;
 }
 .highlight .nv {
-    color: #008080;
+  color: #008080;
 }
 .highlight .ow {
-    color: #000000;
-    font-weight: bold;
+  color: var(--color);
+  font-weight: bold;
 }
 .highlight .o {
-    color: #000000;
-    font-weight: bold;
+  color: var(--purple);
+  font-weight: bold;
 }
 .highlight .w {
-    color: #bbbbbb;
+  color: #bbbbbb;
 }
