Add cell-automaton to playground

--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -7,8 +7,10 @@
 
   <div class="section-content">
 
+
     <div class="project-type mb-2 pt-2">
       <h3>Playground</h3>
+      <p>I sometimes write javascript when I'm bored. Everyone has their vices.</p>
     </div>
     <div class="project-row row pl-0">
       <div class="project-item col-sm">
@@ -56,10 +58,22 @@
           </a>
         </p>
       </div>
-      <div class="project-item col-sm"></div>
+      <div class="project-item col-sm">
+        <h4>
+          <a href="projects/cell-automaton/index.html">
+            <span class="projects-nav">Cell-Automaton</span>
+          </a>
+        </h4>
+        <p>
+          A simple implementation of Conway's Game of Life. Looking to implement rulesets
+          for other cellular automaton in the future.
+          <br />
+        </p>
+      </div>
     </div>
 
-    <div class="project-type mb-2 pt-0">
+
+    <div class="project-type mt-2 mb-2 pt-2">
       <h3>Language</h3>
     </div>
     <div class="project-row row pl-0">
@@ -80,7 +94,8 @@
       <div class="project-item col-sm"></div>
     </div>
 
-    <div class="project-type mb-2 pt-0">
+
+    <div class="project-type mt-2 mb-2 pt-2">
       <h3>Volunteer/Community</h3>
     </div>
     <div class="project-row row pl-0">
@@ -93,6 +108,7 @@
       </div>
       <div class="project-item col-sm"></div>
     </div>
+
 
   </div>
 </section>
